# Vish

./: .editorconfig  .gitignore  LICENSE  PR_DESCRIPTION.md  README-FIX.md  README.md  flake.nix  main.py  meson.build  u.py  vish
.github/ISSUE_TEMPLATE/: Bug_Report.yml  Translation_support.yml
.github/workflows/: bot-check-translation.yml
assets/markdown/: CREDITS.md  WHATSNEW.md
assets/models/: ar.json  cs.json  de.json  en.json  es.json  fr.json  it.json  node_colors.json  ptbr.json
assets/models/lang/: ar.json  cs.json  de.json  en.json  es.json  fr.json  it.json  ptbr.json
commands/: undo_commands.py
core/: ansi_to_html.py  bash_context.py  bash_emitter.py  clipboard.py  config.py  debug.py  graph.py  highlights.py  icons.py  layout.py  logger.py  node_color.py  port_types.py  projects.py  serializer.py  traduction.py  validator.py
data/: io.github.lluciocc.Vish.metainfo.xml
docs/: troubleshooting.md
flatpak/: io.github.lluciocc.Vish.metainfo.xml  io.github.lluciocc.Vish.yml  local.io.github.lluciocc.Vish.yml
nodes/: base_node.py  command_nodes.py  flow_nodes.py  operation_nodes.py  registry.py  utils_node.py  variable_nodes.py
scripts/: fix-pyside6-runtime.sh  restore-latest-kde-runtime.sh
theme/: BreezeDark.yml  theme.py  theme_parser.py
ui/: comment_box.py  edge_item.py  graph_scene.py  graph_view.py  info.py  keyboard_shortcuts.py  menu_style.py  node_item.py  palette.py  port_item.py  property_panel.py  settings.py  welcome.py
ui/about/: about.py  about_pages.py
